# iris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test_2025-07-20_20:22:04.exr  vcpkg-configuration.json  vcpkg.json
dependencies/: commandLine.cpp  commandLine.h
src/: bounds3.cpp  bounds3.h  bvh.cpp  bvh.h  camera.cpp  camera.h  environment.cpp  environment.h  image.cpp  image.h  intersection.cpp  intersection.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  plane.cpp  plane.h  primitive.cpp  primitive.h  random.cpp  random.h  ray.cpp  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
tests/: test_bounds3.cpp  test_vec3.cpp
